[package]
name = "pi_async_buffer"
version = "0.6.1"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"
description = "Asynchronous Buffer for IO"
repository = "https://github.com/GaiaWorld/pi_async_buffer.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async", "buffer"]

[dependencies]
pi_async = "0.5"
futures = "0.3"
crossbeam-queue = "0.3"
bytes = "1.2"

[dev-dependencies]
pi_async_file = "0.4"